<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="INPUT_G6" Id="{90f5e18c-05ba-44d3-9e34-0b58d9ccefe9}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM INPUT_G6
VAR
	TMR11: TON;
	TMR12: TON;
	TMR10: TON;
	TMR8: TON;
	TMR9: TON;
	TMR7: TON;
	TMR3: TON;
	TP1: TP;
	TMR1: TON;
	START_ROBOT: TP;
	TP2: TP;
	O_G6_HANG: BOOL;
	I_G6_HANG: BOOL;
	TMR2: TON;
	GO_ROBOT: BOOL;
	TP3: TP;
	TMR4: TON;
	CNT_CYCLE: CTU;
	START_ROTATE: R_TRIG;
	IN: INT;
	TP_END_FUKUDA: TP;
	CNT_END_FUKUDA: CTU;
	ROBOT_READY: BOOL;
	ROBOT_G6_READY: BOOL;
	END_FUKUDA: BOOL;
	O_END_FUKUDA: BOOL;
	TEMP_COUNTER_FUKUDA_A: INT;
	TEMP_COUNTER_FUKUDA_B: INT;
	O_END_FUKUDB: BOOL;
	MAX_DEVICE: INT;
	TMR_HANG: TON;
	GRP1: Tp;
	GRP2: Tp;
	GRP3: Tp;
	GRP4: Tp;
	CNT_PLACING: ctu;
	CNT_TAKING: CTU;
	CNT_CYCLE1: CTU;
END_VAR

VAR PERSISTENT
	TRGEN: R_TRIG;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF INPUT_G6_VAR.I_G6_ENABLE  THEN
//GRIPPING 
IF INPUT_G6_VAR.IX_G6_GRIPPER_1 THEN
	INPUT_G6_VAR.O_G6_GRIPPER_CLOSE_1:=TRUE;
	INPUT_G6_VAR.O_G6_GRIPPER_OPEN_1:=FALSE;
ELSE
	INPUT_G6_VAR.O_G6_GRIPPER_CLOSE_1:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_OPEN_1:=TRUE;
END_IF

IF INPUT_G6_VAR.IX_G6_GRIPPER_2 THEN
	INPUT_G6_VAR.O_G6_GRIPPER_CLOSE_2:=TRUE;
	INPUT_G6_VAR.O_G6_GRIPPER_OPEN_2:=FALSE;
ELSE
	INPUT_G6_VAR.O_G6_GRIPPER_CLOSE_2:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_OPEN_2:=TRUE;
END_IF 

IF INPUT_G6_VAR.IX_G6_GRIPPER_3 THEN
	INPUT_G6_VAR.O_G6_GRIPPER_CLOSE_3:=TRUE;
	INPUT_G6_VAR.O_G6_GRIPPER_OPEN_3:=FALSE;
ELSE
	INPUT_G6_VAR.O_G6_GRIPPER_CLOSE_3:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_OPEN_3:=TRUE;
END_IF

IF INPUT_G6_VAR.IX_G6_GRIPPER_4 THEN
	INPUT_G6_VAR.O_G6_GRIPPER_CLOSE_4:=TRUE;
	INPUT_G6_VAR.O_G6_GRIPPER_OPEN_4:=FALSE;
ELSE
	INPUT_G6_VAR.O_G6_GRIPPER_CLOSE_4:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_OPEN_4:=TRUE;
END_IF

//EXTENDER DOWN
IF INPUT_G6_VAR.IX_G6_GRIPPER_EXT_1 THEN
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_DOWN_1:=TRUE;
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_UP_1:=FALSE;
ELSE
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_DOWN_1:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_UP_1:=TRUE;
END_IF

IF INPUT_G6_VAR.IX_G6_GRIPPER_EXT_2 THEN
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_DOWN_2:=TRUE;
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_UP_2:=FALSE;
ELSE
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_DOWN_2:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_UP_2:=TRUE;
END_IF

IF INPUT_G6_VAR.IX_G6_GRIPPER_EXT_3 THEN
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_DOWN_3:=TRUE;
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_UP_3:=FALSE;
ELSE
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_DOWN_3:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_UP_3:=TRUE;
END_IF

IF INPUT_G6_VAR.IX_G6_GRIPPER_EXT_4 THEN
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_DOWN_4:=TRUE;
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_UP_4:=FALSE;
ELSE
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_DOWN_4:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_UP_4:=TRUE;
END_IF
IF INPUT_G6_VAR.I_G6_READY_TAKEUP THEN
	INPUT_G6_VAR.O_G6_GRIPPER_CLOSE_1:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_OPEN_1:=TRUE;
	
	INPUT_G6_VAR.O_G6_GRIPPER_CLOSE_2:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_OPEN_2:=TRUE;
	
	INPUT_G6_VAR.O_G6_GRIPPER_CLOSE_3:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_OPEN_3:=TRUE;
	
	INPUT_G6_VAR.O_G6_GRIPPER_CLOSE_3:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_OPEN_3:=TRUE;
END_IF

INPUT_G6_VAR.GRIPPER_OPEN_1:=INPUT_G6_VAR.I_G6_GRIPPER_OPEN_1;
INPUT_G6_VAR.GRIPPER_OPEN_2:=INPUT_G6_VAR.I_G6_GRIPPER_OPEN_2;
INPUT_G6_VAR.GRIPPER_OPEN_3:=INPUT_G6_VAR.I_G6_GRIPPER_OPEN_3;
INPUT_G6_VAR.GRIPPER_OPEN_4:=INPUT_G6_VAR.I_G6_GRIPPER_OPEN_4;

INPUT_G6_VAR.GRIPPER_CLOSE_1:=INPUT_G6_VAR.I_G6_GRIPPER_CLOSE_1;
INPUT_G6_VAR.GRIPPER_CLOSE_2:=INPUT_G6_VAR.I_G6_GRIPPER_CLOSE_2;
INPUT_G6_VAR.GRIPPER_CLOSE_3:=INPUT_G6_VAR.I_G6_GRIPPER_CLOSE_3;
INPUT_G6_VAR.GRIPPER_CLOSE_4:=INPUT_G6_VAR.I_G6_GRIPPER_CLOSE_4;

//ACTIVATE ROBOT
TRGEN(CLK:=INPUT_G6_VAR.I_G6_ENABLE); 
IF TRGEN.Q THEN
	INPUT_G6_VAR.O_G6_RESET_COUNTER_PICK:=TRUE;
END_IF
IF INPUT_G6_VAR.I_G6_START_PLACING OR INPUT_G6_VAR.I_G6_START_TAKEUP THEN
	INPUT_G6_VAR.O_G6_RESET_COUNTER_PICK:=FALSE;
END_IF
//IF INPUT_G6_VAR.I_G6_ENABLE THEN
TP_END_FUKUDA(IN:=INPUT_G6_VAR.I_G6_END_FUKUDA,PT:=T#0.1S);
CNT_END_FUKUDA(CU:=TP_END_FUKUDA.Q,RESET:=CNT_END_FUKUDA.Q,PV:=1000);

INPUT_VAR.I_STOPPER_TRANSFER_ON_A:= INPUT_VAR.O_STOPPER_TRANSFER_A;
//IF INPUT_VAR.I_STOPPER_TRANSFER_ON_A OR INPUT_VAR.I_STOPPER_TRANSFER_ON_B THEN
INPUT_G6_VAR.O_G6_SETMOTOROFF:=FALSE;
IF NOT INPUT_G6_VAR.I_G6_MOTORON THEN
	INPUT_G6_VAR.O_G6_STOP:=FALSE;
END_IF
IF NOT INPUT_G6_VAR.I_G6_MOTORON AND INPUT_G6_VAR.I_G6_READY AND NOT INPUT_G6_VAR.I_G6_ESTOPON AND NOT INPUT_G6_VAR.I_G6_SAFEGUARDON THEN
	INPUT_G6_VAR.O_G6_SETMOTORON:=TRUE;
	INPUT_G6_VAR.O_G6_STOP:=FALSE;
	INPUT_G6_VAR.O_G6_RESET :=FALSE;	
	INPUT_G6_VAR.O_G6_START :=FALSE ;
	INPUT_G6_VAR.O_G6_CONTINUE :=FALSE;
TMR1(IN:=INPUT_G6_VAR.O_G6_SETMOTORON ,PT:=T#0.5S);
ELSE
	INPUT_G6_VAR.O_G6_SETMOTOROFF:=FALSE;
	INPUT_G6_VAR.O_G6_SETMOTORON:=FALSE;
END_IF

//START POSITION CANNOT BE 0
IF INPUT_G6_VAR.START_POSITION =0 THEN
	INPUT_G6_VAR.START_POSITION :=1;
END_IF
// ERROR OVERRIDE	
	IF 	INPUT_G6_VAR.I_G6_ERROR OR INPUT_G6_VAR.I_CMDERROR THEN// AND INPUT_G6_VAR.I_G6_READY THEN// OR INPUT_G6_VAR.G6_ERROR1> 0 OR INPUT_G6_VAR.G6_ERROR2 > 0 THEN
		INPUT_G6_VAR.O_G6_STOP :=TRUE ;			
		TMR10(IN:=INPUT_G6_VAR.O_G6_STOP,PT:=T#1S);
		INPUT_VAR.ALARM1:=INPUT_G6_VAR.I_G6_ERROR OR INPUT_G6_VAR.G6_ERROR1> 0 OR INPUT_G6_VAR.G6_ERROR2 > 0;
		IF NOT TMR10.Q AND INPUT_G6_VAR.I_G6_READY THEN
			INPUT_G6_VAR.O_G6_RESET :=TRUE;	
			INPUT_G6_VAR.O_G6_START :=FALSE ;
			INPUT_G6_VAR.O_G6_CONTINUE :=FALSE;
			INPUT_G6_VAR.O_G6_STOP :=FALSE ;	
			TMR10(IN:=FALSE);
		END_IF
	ELSE
		INPUT_G6_VAR.O_G6_RESET :=FALSE;	
	END_IF
IF INPUT_G6_VAR.I_G6_MOTORON AND NOT INPUT_G6_VAR.I_G6_ESTOPON AND NOT INPUT_G6_VAR.I_G6_SAFEGUARDON AND INDEXING_1_VAR.I_INDEXING_1_ROTATION_DONE  THEN
IF (INPUT_G6_VAR.I_G6_READY OR INPUT_G6_VAR.I_G6_RUNNING) AND NOT INPUT_G6_VAR.I_G6_ERROR AND NOT INPUT_G6_VAR.I_CMDERROR THEN
	
//START FOR 1ST TIME
		IF INPUT_G6_VAR.I_G6_READY  AND NOT INPUT_G6_VAR.I_G6_RUNNING THEN
			INPUT_G6_VAR.O_G6_STOP:=FALSE;
			INPUT_G6_VAR.O_G6_CONTINUE :=FALSE;
			INPUT_G6_VAR.O_G6_PAUSE:=FALSE;
			INPUT_G6_VAR.O_G6_RESET :=FALSE;
			TMR7(IN:=INPUT_G6_VAR.I_G6_READY,PT:=T#1S);
			START_ROBOT(IN:=TMR7.Q,PT:=T#2S);
			INPUT_G6_VAR.O_G6_START :=TMR7.Q ;
		ELSE
			TMR7(IN:=FALSE);
			INPUT_G6_VAR.O_G6_START :=FALSE ;
		END_IF
		IF  NOT INPUT_G6_VAR.I_G6_READY OR INPUT_G6_VAR.I_G6_RUNNING THEN
			INPUT_G6_VAR.O_G6_START :=FALSE ;
		END_IF
		IF INPUT_G6_VAR.I_G6_READY AND INPUT_G6_VAR.O_G6_START THEN
			TMR_HANG(IN:=TRUE,PT:=T#30S);
			IF TMR_HANG.Q THEN
				INPUT_G6_VAR.O_G6_START :=FALSE ;
				INPUT_G6_VAR.O_G6_STOP :=TRUE ;
			END_IF
		ELSE
			TMR_HANG(IN:=FALSE);
		END_IF
//STOP 
		IF INPUT_G6_VAR.I_G6_END_FUKUDA OR( NOT INPUT_G6_VAR.I_G6_READY AND NOT INPUT_G6_VAR.I_G6_RUNNING) THEN
			TMR8(IN:=FALSE);
			TMR9(IN:=FALSE);
		//	INPUT_G6_VAR.O_G6_STOP:=TRUE;
		//	LOADER_RS4_VAR.O_LOADER_RS4_STOP:=TRUE;
		END_IF
		TMR2(IN:=INPUT_G6_VAR.O_G6_STOP,PT:=T#1S);
		IF TMR2.Q THEN
			INPUT_G6_VAR.I_G6_HANG:=FALSE;
			INPUT_G6_VAR.O_G6_STOP:=FALSE;
			TMR1(IN:=FALSE);
		END_IF

		
//CONTINUE	
		//INPUT_G6_VAR.GO_ROBOT:=(INPUT_G6_VAR.I_G6_READY_PLACING AND LOADER_RS4_VAR.I_LOADER_RS4_READY_TAKEUP AND INDEXING_2_VAR.O_ROTATION_DONE )OR(INPUT_G6_VAR.I_G6_READY_PLACING AND NOT LOADER_RS4_VAR.I_LOADER_RS4_ENABLE AND  INDEXING_1_VAR.I_INDEXING_1_ROTATION_DONE)    ;	
		IF (INPUT_G6_VAR.I_G6_READY_PLACING AND LOADER_RS4_VAR.I_LOADER_RS4_READY_TAKEUP AND  INDEXING_1_VAR.I_INDEXING_1_ROTATION_DONE AND INDEXING_2_VAR.I_INDEXING_2_ROTATION_DONE)  THEN
			INPUT_G6_VAR.GO_ROBOT:=TRUE;
		END_IF
		IF (INPUT_G6_VAR.I_G6_READY_PLACING AND NOT LOADER_RS4_VAR.I_LOADER_RS4_ENABLE AND  INDEXING_1_VAR.I_INDEXING_1_ROTATION_DONE AND INDEXING_2_VAR.I_INDEXING_2_ROTATION_DONE) THEN
			INPUT_G6_VAR.GO_ROBOT:=TRUE;
		END_IF
		IF INPUT_G6_VAR.I_G6_START_TAKEUP THEN
			INPUT_G6_VAR.GO_ROBOT:=FALSE;
		END_IF	
		IF INDEXING_1_VAR.I_INDEXING_1_ROTATION_DONE AND INPUT_G6_VAR.GO_ROBOT AND INPUT_VAR.STRAIGHTEN_DONE  AND INPUT_G6_VAR.I_G6_RUNNING AND NOT LOADER_RS4_VAR.I_LOADER_RS4_END_CARRIER THEN
			TMR3(IN:=INPUT_G6_VAR.GO_ROBOT ,PT:=T#0.5S);
			TP1(IN:=INPUT_G6_VAR.GO_ROBOT,PT:=T#0.1S);
		ELSE
			TMR3(IN:=FALSE);
			TP1(IN:=FALSE);
		END_IF
		
		IF INPUT_G6_VAR.I_G6_RUNNING AND  INDEXING_1_VAR.I_INDEXING_1_ROTATION_DONE THEN
			INPUT_G6_VAR.O_G6_START :=FALSE ;
			INPUT_G6_VAR.O_G6_CONTINUE :=TMR3.Q;
			IF (CNT_CYCLE.CV <=3 AND INPUT_G6_VAR.I_G6_READY_TAKEUP AND (INPUT_VAR.I_FUKUDA_TRANSFER_AT_FRONT_A OR INPUT_VAR.I_FUKUDA_TRANSFER_AT_FRONT_B)) AND  INDEXING_1_VAR.I_INDEXING_1_ROTATION_DONE THEN
				INPUT_G6_VAR.O_G6_CONTINUE :=TRUE;
			END_IF
		END_IF
		
//ENABLE ROBOT LOADER RS4
		CNT_CYCLE(CU:=INPUT_G6_VAR.I_G6_START_PLACING,RESET:=NOT INPUT_G6_VAR.I_G6_ENABLE,PV:=4);
		IF CNT_CYCLE.CV =3 AND NOT LOADER_RS4_VAR.I_LOADER_RS4_ENABLE  THEN
			LOADER_RS4_VAR.I_LOADER_RS4_ENABLE:=TRUE;
		END_IF
//PAUSE
		CNT_CYCLE1(CU:=INPUT_G6_VAR.I_G6_START_TAKEUP,RESET:=NOT INPUT_G6_VAR.I_G6_ENABLE,PV:=5);
		IF CNT_CYCLE.CV >=4 AND NOT LOADER_RS4_VAR.I_LOADER_RS4_ENABLE AND  INPUT_G6_VAR.I_G6_RUNNING THEN
			///INPUT_G6_VAR.O_G6_PAUSE:=TRUE;
		END_IF
//START ROTATE INDEXING 1
		IF NOT LOADER_RS4_VAR.I_LOADER_RS4_ENABLE  AND  (INPUT_G6_VAR.IX_G6_GRIPPER_EXT_1 AND INPUT_G6_VAR.I_G6_START_TAKEUP )  THEN
			START_ROTATE(CLK:=TRUE);
			INDEXING_1_VAR.O_ROTATION_START:=TRUE;
		ELSE
			START_ROTATE(CLK:=FALSE);
		END_IF
		IF INPUT_G6_VAR.I_G6_START_PLACING THEN
			INDEXING_1_VAR.O_ROTATION_START:=FALSE;
		END_IF
		
 //SYNCRONIZE ROBOT G6 AND RS4 
		IF INPUT_G6_VAR.I_G6_START_TAKEUP AND LOADER_RS4_VAR.I_LOADER_RS4_START_PLACING  THEN
			INPUT_G6_VAR.GO_ROBOT:=FALSE;
			INPUT_G6_VAR.I_READY_CONTINUE:=FALSE;
			LOADER_RS4_VAR.I_READY_CONTINUE:=FALSE;
		END_IF
		
		IF INPUT_G6_VAR.I_READY_CONTINUE AND LOADER_RS4_VAR.I_READY_CONTINUE THEN
			//INPUT_G6_VAR.O_G6_CONTINUE :=TRUE;
			//LOADER_RS4_VAR.O_LOADER_RS4_CONTINUE :=TRUE;
		END_IF
		
 //END FUKUDA21
 //INPUT_G6_VAR.I_MAX_DEVICE:=40;
// IF INPUT_G6_VAR.I_G6_START_takeup THEN
	 TEMP_COUNTER_FUKUDA_A:=INPUT_G6_VAR.COUNTER_FUKUDA_A;
	 TEMP_COUNTER_FUKUDA_B:=INPUT_G6_VAR.COUNTER_FUKUDA_B;
// END_IF
 		
		IF TEMP_COUNTER_FUKUDA_A >=INPUT_G6_VAR.I_MAX_DEVICE   OR TEMP_COUNTER_FUKUDA_B >=INPUT_G6_VAR.I_MAX_DEVICE THEN
			INPUT_G6_VAR.O_G6_RESET_COUNTER_PICK:=TRUE;
			INPUT_G6_VAR.START_POSITION:=1;
			//TEMP_COUNTER_FUKUDA_A:=0;
			ELSE
				INPUT_G6_VAR.O_G6_RESET_COUNTER_PICK:=FALSE;
		END_IF
		
		IF TEMP_COUNTER_FUKUDA_A >=INPUT_G6_VAR.I_MAX_DEVICE THEN
			O_END_FUKUDA:=TRUE;
			//INPUT_G6_VAR.O_G6_SELECT_FUKUDA_A:=TRUE;
			//INPUT_VAR.I_FUKUDA_TRANSFER_A_PICK_DONE:=TRUE;
			//TEMP_COUNTER_FUKUDA_A:=0;
			ELSE
				O_END_FUKUDA:=FALSE;
		END_IF
		
		IF TEMP_COUNTER_FUKUDA_B >=INPUT_G6_VAR.I_MAX_DEVICE THEN
			O_END_FUKUDB:=TRUE;
			//INPUT_G6_VAR.O_G6_SELECT_FUKUDA_A:=FALSE;
			//INPUT_VAR.I_FUKUDA_TRANSFER_B_PICK_DONE:=TRUE;
			ELSE
			O_END_FUKUDB:=FALSE;
		END_IF

	IF INPUT_G6_VAR.O_G6_GRIPPER_CLOSE_1  THEN
 		GRP1(IN:=TRUE,PT:=T#0.1S);
		ELSE
		GRP1(IN:=FALSE);	
	END_IF
	IF INPUT_G6_VAR.O_G6_GRIPPER_CLOSE_2  THEN
 		GRP2(IN:=TRUE,PT:=T#0.1S); 
		ELSE
		GRP2(IN:=FALSE);	
	END_IF
	IF INPUT_G6_VAR.O_G6_GRIPPER_CLOSE_3  THEN
 		GRP3(IN:=TRUE,PT:=T#0.1S);
		ELSE
		GRP3(IN:=FALSE);	
	END_IF
	IF INPUT_G6_VAR.O_G6_GRIPPER_CLOSE_4  THEN
 		GRP4(IN:=TRUE,PT:=T#0.1S);
		ELSE
		GRP4(IN:=FALSE);	
	END_IF
//	IF LOADER_RS4_VAR.I_LOADER_RS4_START_PLACING THEN
		CNT_TAKING.CU:=(GRP1.Q OR GRP2.Q OR GRP3.Q OR GRP4.Q); 
//	END_IF
	CNT_PLACING(RESET:=INDEXING_2_VAR.O_ROTATION_START,PV:=68);

END_IF
END_IF
ELSE
	//INPUT_G6_VAR.O_G6_STOP :=TRUE ;
	//INPUT_G6_VAR.O_G6_RESET :=TRUE;	
	(*INPUT_G6_VAR.O_G6_START :=FALSE ;
	INPUT_G6_VAR.O_G6_CONTINUE :=FALSE;
	
	INPUT_G6_VAR.O_G6_SETMOTORON:=FALSE;
	
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_DOWN_1:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_UP_1:=TRUE;
	
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_DOWN_2:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_UP_2:=TRUE;
	
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_DOWN_3:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_UP_3:=TRUE;
	
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_DOWN_4:=FALSE;
	INPUT_G6_VAR.O_G6_GRIPPER_EXT_UP_4:=TRUE;
	
	IF INPUT_G6_VAR.I_G6_READY THEN
		INPUT_G6_VAR.O_G6_SETMOTOROFF:=TRUE;
	END_IF
	*)
END_IF
//END_IF

]]></ST>
    </Implementation>
    <LineIds Name="INPUT_G6">
      <LineId Id="23" Count="2" />
      <LineId Id="163" Count="0" />
      <LineId Id="143" Count="1" />
      <LineId Id="164" Count="0" />
      <LineId Id="27" Count="1" />
      <LineId Id="165" Count="22" />
      <LineId Id="29" Count="0" />
      <LineId Id="66" Count="3" />
      <LineId Id="188" Count="2" />
      <LineId Id="70" Count="0" />
      <LineId Id="191" Count="23" />
      <LineId Id="1801" Count="0" />
      <LineId Id="1849" Count="1" />
      <LineId Id="1852" Count="8" />
      <LineId Id="1851" Count="0" />
      <LineId Id="1861" Count="0" />
      <LineId Id="1863" Count="0" />
      <LineId Id="1865" Count="7" />
      <LineId Id="1864" Count="0" />
      <LineId Id="1862" Count="0" />
      <LineId Id="1794" Count="0" />
      <LineId Id="1798" Count="2" />
      <LineId Id="1802" Count="2" />
      <LineId Id="934" Count="0" />
      <LineId Id="336" Count="0" />
      <LineId Id="812" Count="0" />
      <LineId Id="983" Count="0" />
      <LineId Id="340" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="1698" Count="0" />
      <LineId Id="1707" Count="2" />
      <LineId Id="332" Count="0" />
      <LineId Id="1371" Count="0" />
      <LineId Id="1694" Count="3" />
      <LineId Id="1220" Count="1" />
      <LineId Id="1373" Count="0" />
      <LineId Id="1230" Count="0" />
      <LineId Id="1219" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="1202" Count="0" />
      <LineId Id="505" Count="0" />
      <LineId Id="1200" Count="1" />
      <LineId Id="1580" Count="2" />
      <LineId Id="1703" Count="0" />
      <LineId Id="1583" Count="4" />
      <LineId Id="1704" Count="0" />
      <LineId Id="1588" Count="4" />
      <LineId Id="246" Count="1" />
      <LineId Id="560" Count="0" />
      <LineId Id="463" Count="0" />
      <LineId Id="259" Count="0" />
      <LineId Id="1699" Count="3" />
      <LineId Id="264" Count="0" />
      <LineId Id="391" Count="0" />
      <LineId Id="434" Count="0" />
      <LineId Id="450" Count="0" />
      <LineId Id="266" Count="0" />
      <LineId Id="1360" Count="0" />
      <LineId Id="400" Count="0" />
      <LineId Id="427" Count="0" />
      <LineId Id="474" Count="2" />
      <LineId Id="1380" Count="0" />
      <LineId Id="1386" Count="0" />
      <LineId Id="1388" Count="0" />
      <LineId Id="1387" Count="0" />
      <LineId Id="1498" Count="0" />
      <LineId Id="1382" Count="0" />
      <LineId Id="1384" Count="0" />
      <LineId Id="1381" Count="0" />
      <LineId Id="428" Count="0" />
      <LineId Id="409" Count="0" />
      <LineId Id="273" Count="2" />
      <LineId Id="1652" Count="0" />
      <LineId Id="397" Count="0" />
      <LineId Id="277" Count="0" />
      <LineId Id="489" Count="0" />
      <LineId Id="491" Count="0" />
      <LineId Id="493" Count="2" />
      <LineId Id="1389" Count="0" />
      <LineId Id="492" Count="0" />
      <LineId Id="464" Count="0" />
      <LineId Id="516" Count="0" />
      <LineId Id="278" Count="0" />
      <LineId Id="920" Count="1" />
      <LineId Id="926" Count="2" />
      <LineId Id="1649" Count="0" />
      <LineId Id="1651" Count="0" />
      <LineId Id="1650" Count="0" />
      <LineId Id="919" Count="0" />
      <LineId Id="329" Count="0" />
      <LineId Id="514" Count="0" />
      <LineId Id="922" Count="0" />
      <LineId Id="515" Count="0" />
      <LineId Id="442" Count="0" />
      <LineId Id="282" Count="0" />
      <LineId Id="1593" Count="0" />
      <LineId Id="1374" Count="0" />
      <LineId Id="1379" Count="0" />
      <LineId Id="1375" Count="0" />
      <LineId Id="283" Count="0" />
      <LineId Id="1101" Count="1" />
      <LineId Id="1377" Count="0" />
      <LineId Id="1634" Count="0" />
      <LineId Id="1103" Count="0" />
      <LineId Id="477" Count="0" />
      <LineId Id="654" Count="0" />
      <LineId Id="656" Count="1" />
      <LineId Id="1640" Count="0" />
      <LineId Id="1637" Count="0" />
      <LineId Id="1639" Count="0" />
      <LineId Id="1635" Count="1" />
      <LineId Id="1097" Count="0" />
      <LineId Id="914" Count="1" />
      <LineId Id="1648" Count="0" />
      <LineId Id="1646" Count="1" />
      <LineId Id="918" Count="0" />
      <LineId Id="929" Count="0" />
      <LineId Id="932" Count="1" />
      <LineId Id="1641" Count="0" />
      <LineId Id="930" Count="0" />
      <LineId Id="923" Count="1" />
      <LineId Id="1037" Count="0" />
      <LineId Id="1039" Count="0" />
      <LineId Id="925" Count="0" />
      <LineId Id="1032" Count="0" />
      <LineId Id="1040" Count="0" />
      <LineId Id="1042" Count="0" />
      <LineId Id="1044" Count="0" />
      <LineId Id="1043" Count="0" />
      <LineId Id="1435" Count="0" />
      <LineId Id="1041" Count="0" />
      <LineId Id="1206" Count="0" />
      <LineId Id="1117" Count="1" />
      <LineId Id="1187" Count="0" />
      <LineId Id="1119" Count="0" />
      <LineId Id="1112" Count="0" />
      <LineId Id="1031" Count="0" />
      <LineId Id="1094" Count="0" />
      <LineId Id="1210" Count="0" />
      <LineId Id="1114" Count="0" />
      <LineId Id="1208" Count="0" />
      <LineId Id="1212" Count="0" />
      <LineId Id="1231" Count="0" />
      <LineId Id="1301" Count="0" />
      <LineId Id="1104" Count="0" />
      <LineId Id="1291" Count="0" />
      <LineId Id="1293" Count="0" />
      <LineId Id="1295" Count="3" />
      <LineId Id="1300" Count="0" />
      <LineId Id="1173" Count="3" />
      <LineId Id="1178" Count="0" />
      <LineId Id="1234" Count="0" />
      <LineId Id="1215" Count="0" />
      <LineId Id="1209" Count="0" />
      <LineId Id="1290" Count="0" />
      <LineId Id="1390" Count="25" />
      <LineId Id="506" Count="0" />
      <LineId Id="1357" Count="0" />
      <LineId Id="1364" Count="0" />
      <LineId Id="1358" Count="0" />
      <LineId Id="1362" Count="1" />
      <LineId Id="1369" Count="1" />
      <LineId Id="1422" Count="2" />
      <LineId Id="1426" Count="8" />
      <LineId Id="1751" Count="0" />
      <LineId Id="1425" Count="0" />
      <LineId Id="1705" Count="1" />
      <LineId Id="1752" Count="0" />
      <LineId Id="716" Count="1" />
      <LineId Id="335" Count="0" />
      <LineId Id="328" Count="0" />
      <LineId Id="334" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>